# advent-of-code-2022

./: .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  14.py  15.py  16.py  18.py  CMakeLists.txt  README.md  aoc_helper.py  aoc_input_fetcher.py  aoc_setup.ps1  requirements.txt  setup_day.ps1
Helpers/: file_utils.cpp
aoc/: __init__.py  main.py
day01/: 01.py  day01.c  day01.cpp  day01.py  main.cpp
day02/: 02.py  day02.c  day02.cpp  day02.py  main.cpp
day03/: day03.cpp  day03.py
day04/: day04.cpp  day04.py
day05/: day05.cpp  day05.py
day06/: 06.py  day06.cpp  day06.py
day07/: day07.py
day08/: 08.py  day08.py
day09/: day09.py
day10/: day10.py
day11/: 11.py  day11.py
day12/: day12.py
day14/: 14.py  day14.py
day15/: day15.py
day16/: 16.py  day16.py
day18/: day18.py
visuals/: 07.py
visuals/07_directory_printing/: 07_directory_printing.py  printed_directory.txt  root_data.pkl
